src/main/d96/parser/.antlr/D96Parser.py
# Generated from d:\initial\src\main\d96\parser\D96.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'Self'", "'Break'", 
                     "'Continue'", "'If'", "'Elseif'", "'Else'", "'Foreach'", 
                     "'True'", "'False'", "'Array'", "'In'", "'Int'", "'Float'", 
                     "'Boolean'", "'String'", "'Return'", "'Null'", "'Class'", 
                     "'Val'", "'Var'", "'Constructor'", "'Destructor'", 
                     "'New'", "'By'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'!'", "'&&'", "'||'", "'=='", "'='", "'!='", "'<'", 
                     "'>'", "'<='", "'>='", "'+.'", "'==.'", "'::'", "<INVALID>", 
                     "<INVALID>", "'('", "')'", "'{'", "'}'", "';'", "'['", 
                     "']'", "'..'", "'.'", "','", "':'" ]

    symbolicNames = [ "<INVALID>", "BOOL", "STR", "FLOAT", "INT_ZERO", "INT_GT", 
                      "DEC_GT", "HEX_GT", "OCTAL_GT", "BINARY_GT", "COMMENT", 
                      "SELF", "BREAK", "CONTINUE", "IF", "ELSEIF", "ELSE", 
                      "FOREACH", "TRUE", "FALSE", "ARRAY", "IN", "INTTYPE", 
                      "FLOATTYPE", "BOOLTYPE", "STRINGTYPE", "RETURN", "NULL", 
                      "CLASS", "VAL", "VAR", "CONSTRUCTOR", "DESTRUCTOR", 
                      "NEW", "BY", "ADD", "SUB", "MUL", "DIV", "RM", "NOT", 
                      "AND", "OR", "EQ", "ASSG", "NEQ", "LT", "GT", "LTE", 
                      "GTE", "STR_CONCAT", "STR_COMPARE", "ACCESS", "ID", 
                      "SID", "LB", "RB", "LP", "RP", "SEMI", "LS", "RS", 
                      "DOTDOT", "DOT", "COMMA", "IS", "WS", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "ERROR_TOKEN" ]

    RULE_program = 0
    RULE_decls = 1
    RULE_class_declaration = 2
    RULE_class_members = 3
    RULE_cl_member = 4
    RULE_attr_decl = 5
    RULE_decl_part = 6
    RULE_method_decl = 7
    RULE_exprlist = 8
    RULE_idlist = 9
    RULE_constructor = 10
    RULE_destructor = 11
    RULE_paramslist = 12
    RULE_params = 13
    RULE_non_st_idlist = 14
    RULE_expr = 15
    RULE_expr1 = 16
    RULE_expr2 = 17
    RULE_expr3 = 18
    RULE_expr4 = 19
    RULE_expr5 = 20
    RULE_expr6 = 21
    RULE_expr7 = 22
    RULE_index_op = 23
    RULE_expr8 = 24
    RULE_expr9 = 25
    RULE_expr10 = 26
    RULE_operands = 27
    RULE_stmt = 28
    RULE_decl_stm = 29
    RULE_decl_stm_part = 30
    RULE_assg_stm = 31
    RULE_if_stm = 32
    RULE_else_if_stm = 33
    RULE_for_stm = 34
    RULE_break_stm = 35
    RULE_continue_stm = 36
    RULE_return_stm = 37
    RULE_invocatoin_stm = 38
    RULE_blk_stmt = 39
    RULE_stmtlist = 40
    RULE_type_name = 41
    RULE_primitive_typ = 42
    RULE_array_typ = 43
    RULE_typ = 44
    RULE_class_typ = 45
    RULE_literals = 46
    RULE_array_literal = 47
    RULE_idxlit = 48
    RULE_mullit = 49
    RULE_arrlist = 50
    RULE_arr = 51

    ruleNames =  [ "program", "decls", "class_declaration", "class_members", 
                   "cl_member", "attr_decl", "decl_part", "method_decl", 
                   "exprlist", "idlist", "constructor", "destructor", "paramslist", 
                   "params", "non_st_idlist", "expr", "expr1", "expr2", 
                   "expr3", "expr4", "expr5", "expr6", "expr7", "index_op", 
                   "expr8", "expr9", "expr10", "operands", "stmt", "decl_stm", 
                   "decl_stm_part", "assg_stm", "if_stm", "else_if_stm", 
                   "for_stm", "break_stm", "continue_stm", "return_stm", 
                   "invocatoin_stm", "blk_stmt", "stmtlist", "type_name", 
                   "primitive_typ", "array_typ", "typ", "class_typ", "literals", 
                   "array_literal", "idxlit", "mullit", "arrlist", "arr" ]

    EOF = Token.EOF
    BOOL=1
    STR=2
    FLOAT=3
    INT_ZERO=4
    INT_GT=5
    DEC_GT=6
    HEX_GT=7
    OCTAL_GT=8
    BINARY_GT=9
    COMMENT=10
    SELF=11
    BREAK=12
    CONTINUE=13
    IF=14
    ELSEIF=15
    ELSE=16
    FOREACH=17
    TRUE=18
    FALSE=19
    ARRAY=20
    IN=21
    INTTYPE=22
    FLOATTYPE=23
    BOOLTYPE=24
    STRINGTYPE=25
    RETURN=26
    NULL=27
    CLASS=28
    VAL=29
    VAR=30
    CONSTRUCTOR=31
    DESTRUCTOR=32
    NEW=33
    BY=34
    ADD=35
    SUB=36
    MUL=37
    DIV=38
    RM=39
    NOT=40
    AND=41
    OR=42
    EQ=43
    ASSG=44
    NEQ=45
    LT=46
    GT=47
    LTE=48
    GTE=49
    STR_CONCAT=50
    STR_COMPARE=51
    ACCESS=52
    ID=53
    SID=54
    LB=55
    RB=56
    LP=57
    RP=58
    SEMI=59
    LS=60
    RS=61
    DOTDOT=62
    DOT=63
    COMMA=64
    IS=65
    WS=66
    UNCLOSE_STRING=67
    ILLEGAL_ESCAPE=68
    ERROR_TOKEN=69

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decls(self):
            return self.getTypedRuleContext(D96Parser.DeclsContext,0)


        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_program




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.decls()
            self.state = 105
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_declaration(self):
            return self.getTypedRuleContext(D96Parser.Class_declarationContext,0)


        def decls(self):
            return self.getTypedRuleContext(D96Parser.DeclsContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_decls




    def decls(self):

        localctx = D96Parser.DeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decls)
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.class_declaration()
                self.state = 108
                self.decls()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.class_declaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID)
            else:
                return self.getToken(D96Parser.ID, i)

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def IS(self):
            return self.getToken(D96Parser.IS, 0)

        def class_members(self):
            return self.getTypedRuleContext(D96Parser.Class_membersContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_class_declaration




    def class_declaration(self):

        localctx = D96Parser.Class_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_class_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(D96Parser.CLASS)
            self.state = 114
            self.match(D96Parser.ID)
            self.state = 118
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.IS]:
                self.state = 115
                self.match(D96Parser.IS)
                self.state = 116
                self.match(D96Parser.ID)
                pass
            elif token in [D96Parser.LP]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 120
            self.match(D96Parser.LP)
            self.state = 123
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL, D96Parser.VAR, D96Parser.CONSTRUCTOR, D96Parser.DESTRUCTOR, D96Parser.ID, D96Parser.SID]:
                self.state = 121
                self.class_members()
                pass
            elif token in [D96Parser.RP]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 125
            self.match(D96Parser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_membersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cl_member(self):
            return self.getTypedRuleContext(D96Parser.Cl_memberContext,0)


        def class_members(self):
            return self.getTypedRuleContext(D96Parser.Class_membersContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_class_members




    def class_members(self):

        localctx = D96Parser.Class_membersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_class_members)
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.cl_member()
                self.state = 128
                self.class_members()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.cl_member()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Cl_memberContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attr_decl(self):
            return self.getTypedRuleContext(D96Parser.Attr_declContext,0)


        def method_decl(self):
            return self.getTypedRuleContext(D96Parser.Method_declContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_cl_member




    def cl_member(self):

        localctx = D96Parser.Cl_memberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_cl_member)
        try:
            self.state = 135
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL, D96Parser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.attr_decl()
                pass
            elif token in [D96Parser.CONSTRUCTOR, D96Parser.DESTRUCTOR, D96Parser.ID, D96Parser.SID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.method_decl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def VAL(self):
            return self.getToken(D96Parser.VAL, 0)

        def VAR(self):
            return self.getToken(D96Parser.VAR, 0)

        def decl_part(self):
            return self.getTypedRuleContext(D96Parser.Decl_partContext,0)


        def expr(self):
            return self.getTypedRuleContext(D96Parser.ExprContext,0)


        def idlist(self):
            return self.getTypedRuleContext(D96Parser.IdlistContext,0)


        def IS(self):
            return self.getToken(D96Parser.IS, 0)

        def type_name(self):
            return self.getTypedRuleContext(D96Parser.Type_nameContext,0)


        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def SID(self):
            return self.getToken(D96Parser.SID, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_attr_decl




    def attr_decl(self):

        localctx = D96Parser.Attr_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attr_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            _la = self._input.LA(1)
            if not(_la==D96Parser.VAL or _la==D96Parser.VAR):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 138
                _la = self._input.LA(1)
                if not(_la==D96Parser.ID or _la==D96Parser.SID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 139
                self.decl_part()
                self.state = 140
                self.expr()
                pass

            elif la_ == 2:
                self.state = 142
                self.idlist()
                self.state = 143
                self.match(D96Parser.IS)
                self.state = 144
                self.type_name()
                pass


            self.state = 148
            self.match(D96Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_partContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def decl_part(self):
            return self.getTypedRuleContext(D96Parser.Decl_partContext,0)


        def expr(self):
            return self.getTypedRuleContext(D96Parser.ExprContext,0)


        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def SID(self):
            return self.getToken(D96Parser.SID, 0)

        def IS(self):
            return self.getToken(D96Parser.IS, 0)

        def type_name(self):
            return self.getTypedRuleContext(D96Parser.Type_nameContext,0)


        def ASSG(self):
            return self.getToken(D96Parser.ASSG, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_decl_part




    def decl_part(self):

        localctx = D96Parser.Decl_partContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_decl_part)
        self._la = 0 # Token type
        try:
            self.state = 160
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 150
                self.match(D96Parser.COMMA)
                self.state = 151
                _la = self._input.LA(1)
                if not(_la==D96Parser.ID or _la==D96Parser.SID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 152
                self.decl_part()
                self.state = 153
                self.expr()
                self.state = 154
                self.match(D96Parser.COMMA)
                pass
            elif token in [D96Parser.IS]:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.match(D96Parser.IS)
                self.state = 157
                self.type_name()
                self.state = 158
                self.match(D96Parser.ASSG)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def blk_stmt(self):
            return self.getTypedRuleContext(D96Parser.Blk_stmtContext,0)


        def SID(self):
            return self.getToken(D96Parser.SID, 0)

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def paramslist(self):
            return self.getTypedRuleContext(D96Parser.ParamslistContext,0)


        def constructor(self):
            return self.getTypedRuleContext(D96Parser.ConstructorContext,0)


        def destructor(self):
            return self.getTypedRuleContext(D96Parser.DestructorContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_method_decl




    def method_decl(self):

        localctx = D96Parser.Method_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_method_decl)
        self._la = 0 # Token type
        try:
            self.state = 172
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.ID, D96Parser.SID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 162
                _la = self._input.LA(1)
                if not(_la==D96Parser.ID or _la==D96Parser.SID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 163
                self.match(D96Parser.LB)
                self.state = 166
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [D96Parser.ID]:
                    self.state = 164
                    self.paramslist()
                    pass
                elif token in [D96Parser.RB]:
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 168
                self.match(D96Parser.RB)
                self.state = 169
                self.blk_stmt()
                pass
            elif token in [D96Parser.CONSTRUCTOR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 170
                self.constructor()
                pass
            elif token in [D96Parser.DESTRUCTOR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 171
                self.destructor()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(D96Parser.ExprContext,0)


        def COMMA(self):
            return self.getToken(D96Parser.COMMA, 0)

        def exprlist(self):
            return self.getTypedRuleContext(D96Parser.ExprlistContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_exprlist




    def exprlist(self):

        localctx = D96Parser.ExprlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_exprlist)
        try:
            self.state = 179
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 174
                self.expr()
                self.state = 175
                self.match(D96Parser.COMMA)
                self.state = 176
                self.exprlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 178
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(D96Parser.COMMA, 0)

        def idlist(self):
            return self.getTypedRuleContext(D96Parser.IdlistContext,0)


        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def SID(self):
            return self.getToken(D96Parser.SID, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_idlist




    def idlist(self):

        localctx = D96Parser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_idlist)
        self._la = 0 # Token type
        try:
            self.state = 186
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 181
                _la = self._input.LA(1)
                if not(_la==D96Parser.ID or _la==D96Parser.SID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 182
                self.match(D96Parser.COMMA)
                self.state = 183
                self.idlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 184
                self.match(D96Parser.ID)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 185
                self.match(D96Parser.SID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstructorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONSTRUCTOR(self):
            return self.getToken(D96Parser.CONSTRUCTOR, 0)

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def blk_stmt(self):
            return self.getTypedRuleContext(D96Parser.Blk_stmtContext,0)


        def paramslist(self):
            return self.getTypedRuleContext(D96Parser.ParamslistContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_constructor




    def constructor(self):

        localctx = D96Parser.ConstructorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_constructor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 188
            self.match(D96Parser.CONSTRUCTOR)
            self.state = 189
            self.match(D96Parser.LB)
            self.state = 192
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.ID]:
                self.state = 190
                self.paramslist()
                pass
            elif token in [D96Parser.RB]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 194
            self.match(D96Parser.RB)
            self.state = 195
            self.blk_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DestructorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DESTRUCTOR(self):
            return self.getToken(D96Parser.DESTRUCTOR, 0)

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def blk_stmt(self):
            return self.getTypedRuleContext(D96Parser.Blk_stmtContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_destructor




    def destructor(self):

        localctx = D96Parser.DestructorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_destructor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 197
            self.match(D96Parser.DESTRUCTOR)
            self.state = 198
            self.match(D96Parser.LB)
            self.state = 199
            self.match(D96Parser.RB)
            self.state = 200
            self.blk_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamslistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def params(self):
            return self.getTypedRuleContext(D96Parser.ParamsContext,0)


        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def paramslist(self):
            return self.getTypedRuleContext(D96Parser.ParamslistContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_paramslist




    def paramslist(self):
